# spatial-agents

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
docs/: CLIENT_REGIONS_PROTOCOL.md  DECISIONS-h3-archive.md  DECISIONS-h3-per-region.md  DECISIONS-h3-retention.md  architecture.html  causal-flow.html  causal-reasoning.html  dag.html  index.html  live-feeds.html  logs.html  map.html  on-device-intelligence.html  privacy.html  spatial-tiling.html  zero-cost.html
docs/causal-flow/: app.jsx  causal-flow.jsx  empty-state.jsx  styles.css  utils.jsx
scripts/: demo.py
spatial_agents/: __init__.py  __main__.py  config.py  main.py  models.py
spatial_agents/causal/: __init__.py  dag_builder.py  event_detector.py  graph_serializer.py  intervention.py
spatial_agents/data/: __init__.py
spatial_agents/deploy/: Dockerfile  __init__.py  cloud_s3.py  local_mac.py
spatial_agents/ingest/: __init__.py  adsb_parser.py  ais_parser.py  aisstream_client.py  feed_manager.py  nws_client.py  tfr_client.py  tle_parser.py
spatial_agents/intelligence/: __init__.py  eval_harness.py  prompt_templates.py  schema_validator.py  token_budget.py
spatial_agents/regions/: __init__.py  manager.py  swap_log.py
spatial_agents/serving/: __init__.py  app.py  file_exporter.py  routes_api.py  routes_health.py  routes_regions.py  routes_stats.py  routes_tfr.py  routes_tiles.py  routes_weather.py
spatial_agents/spatial/: __init__.py  geojson_export.py  h3_indexer.py  temporal_bins.py  tile_builder.py  tile_reaper.py
tests/: __init__.py  conftest.py  test_core.py  test_integration.py  test_tile_reaper.py
